argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: TEGK-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:749856334984:certificate/58dc446e-4449-4cf3-a5ca-e62bdb8cb36d
spec:
  ingressClassName: alb
  rules:
    - host: https://teste.rio-aws.com.br
      http:
       paths:
         - path: /api
           pathType: Prefix
           backend:
             service:
               name: backend
               port:
                 number: 80
         - path: /
           pathType: Prefix
           backend:
             service:
               name: frontend
               port:
                 number: 80
